syntax = "proto3";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";


message WsCartRequest {
    sint64 member_id = 1;
    string action = 2;
    map<string, string> data = 3;
}
message NormalCartRequest {
    sint64 member_id = 1;
    string action = 2;
    map<string, string> data = 3;
}

// 购物车
message SShoppingCart {
    //编号
    sint32 cart_id = 1;
    //购物车KEY
    string code = 2;
    //店铺分组
    repeated SShoppingCartGroup shops = 3;
}
// 购物车店铺分组
message SShoppingCartGroup {
    //店铺编号
    sint64 shop_id = 1;
    //供货商编号
    sint64 vendor_id = 2;
    //店铺名称
    string shop_name = 3;
    //是否结算
    bool checked = 4;
    //商品
    repeated SShoppingCartItem items = 5;
}

// 购物车商品勾选
message SCheckCartItem {
    //商品编号
    sint64 item_id = 1;
    //SKU编号
    sint64 sku_id = 2;
    // 是否勾选
    bool checked = 3;
}

// 购物车商品操作响应
message CartItemResponse {
    int64 err_code = 1;
    string err_msg = 2;
    SShoppingCartItem item = 3;
}

// 购物车商品
message SShoppingCartItem {
    //商品编号
    sint64 item_id = 1;
    //SKU编号
    sint64 sku_id = 2;
    //商品标题
    string title = 3;
    //商品图片
    string image = 4;
    //规格文本
    string spec_word = 5;
    //商品编码
    string code = 6;
    //零售价
    double retail_price = 7;
    //销售价
    double price = 8;
    //数量
    sint32 quantity = 9;
    //是否结算
    bool checked = 10;
    //库存文本
    string stock_text = 11;
    //店铺编号
    sint64 shop_id = 12;
}
